[FEAT] Update code

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -68,3 +68,16 @@ html *::-webkit-scrollbar-track {
         scale: 1;
     }
 }
+
+.ant-table-cell {
+    font-size: 1.6rem;
+}
+
+.ant-form-item-label {
+    font-size: 1.6rem;
+}
+
+.ant-tag {
+    padding: 8px 10px;
+    font-size: 1.6rem;
+}
