--- a/src/views/modules/school/School.module.scss
+++ b/src/views/modules/school/School.module.scss
@@ -1,8 +1,9 @@
 .wrapper-school {
-    .wrapper-actions {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        margin-bottom: 20px;
-    }
+    width: 100%;
+}
+.wrapper-actions {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
